# carbonyl-agent

./: .gitignore  AIWG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  constraints.txt  pyproject.toml
.aiwg/: aiwg.config
.aiwg/architecture/: adr-001-pty-pyte-terminal-emulation.md  adr-002-unix-socket-daemon.md  adr-003-runtime-binary-discovery-order.md  adr-004-gitea-release-runtime-distribution.md  software-architecture-doc.md
.aiwg/deployment/: ci-cd-scaffold.md  release-runbook.md
.aiwg/frameworks/: registry.json
.aiwg/intake/: option-matrix.md  project-intake.md  solution-profile.md
.aiwg/planning/: iteration-001-plan.md
.aiwg/reports/: abm-gate-report.md  construction-ready-brief.md  lom-gate-report.md
.aiwg/requirements/: nfr-register.md  use-cases.md  user-stories.md
.aiwg/security/: threat-model.md
.aiwg/team/: team-profile.md
.aiwg/testing/: test-strategy.md
.aiwg/working/sdlc-accelerate/: state.json
.gitea/workflows/: check.yml  ci.yml
.github/workflows/: ci.yml
crates/carbonyl-fingerprint/: Cargo.toml  README.md
crates/carbonyl-fingerprint/src/: lib.rs  schema.rs
docker/qa-runner/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  run.sh
docker/qa-runner/host-setup/: 99-uinput.rules
docker/qa-runner/xorg.conf.d/: 10-dummy.conf  10-modesetting.conf  20-evdev-input.conf
scripts/: setup-uinput-host.sh
src/carbonyl_agent/: __init__.py  __main__.py  browser.py  daemon.py  install.py  screen_inspector.py  session.py
tests/: test_browser.py  test_daemon_integration.py  test_install.py  test_screen_inspector.py  test_session.py  test_smoke.py
