[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carbonyl-agent"
version = "0.1.0"
description = "Python automation SDK for the Carbonyl headless browser"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pexpect>=4.9",
    "pyte>=0.8",
]

[project.scripts]
carbonyl-agent = "carbonyl_agent.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/carbonyl_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "pyproject.toml",
    "README.md",
]
