[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carbonyl-agent"
version = "0.1.0"
description = "Python automation SDK for the Carbonyl headless browser"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pexpect>=4.9",
    "pyte>=0.8",
]

[project.scripts]
carbonyl-agent = "carbonyl_agent.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pexpect", "pyte"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]

[tool.hatch.build.targets.wheel]
packages = ["src/carbonyl_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "pyproject.toml",
    "README.md",
]
